--- a/foo.ipynb
+++ b/foo.ipynb
@@ -315,14 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
       "2\n",
       "4\n",
       "8\n",
@@ -336,7 +335,7 @@
        "32"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +353,7 @@
     "        print(curr)\n",
     "        return curr\n",
     "\n",
-    "powerOf2(50)"
+    "powerOf2(50)\n"
    ]
   },
   {
